Tailor agent prompts to YouTrackDB and fix permission gaps
- Add project-specific context sections to both reviewer agents
  covering package namespace, custom TinkerPop fork, generated code
  paths, code style, branching conventions, and module structure
- Replace generic web-app checklists (CSRF, XSS, bundle size, N+1
  queries) with database-engine items: WAL atomicity, page corruption,
  RID integrity, direct memory management, B-tree index efficiency,
  O(1) link traversal, encryption at rest
- Add CI status check step to pr-reviewer workflow
- Add PR template compliance verification to pr-reviewer
- Instruct both agents to read CLAUDE.md before reviewing
- Deny gh pr merge and destructive GitHub MCP operations in
  project-level settings to match container-level policy

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>